spring cloud hystrix

--- a/feign-client/src/main/resources/application.properties
+++ b/feign-client/src/main/resources/application.properties
@@ -6,5 +6,8 @@ server.port=8600
 #服务中心地址
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
+#打开服务熔断机制
+feign.hystrix.enabled=true
+
 
 
