--- a/ribbon-client/src/main/resources/application.properties
+++ b/ribbon-client/src/main/resources/application.properties
@@ -5,3 +5,8 @@ server.port=8700
 
 #服务中心地址
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+#打开hystix.stream端点(默认为打开，可以不写)
+#management.endpoint.hystrix.stream.enabled=true
+#对外暴露以下端点
+management.endpoints.web.exposure.include=hystrix.stream,health,info
