--- a/feign-client/src/main/resources/application.properties
+++ b/feign-client/src/main/resources/application.properties
@@ -9,5 +9,10 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 #打开服务熔断机制
 feign.hystrix.enabled=true
 
+#打开hystix.stream端点(默认为打开，可以不写)
+management.endpoint.hystrix.stream.enabled=true
+#对外暴露以下端点
+management.endpoints.web.exposure.include=beans,hystrix.stream,health,info
+
 
 
