spring cloud bus

--- a/eureka-client/src/main/resources/bootstrap.properties
+++ b/eureka-client/src/main/resources/bootstrap.properties
@@ -2,11 +2,24 @@
 spring.cloud.config.name=common
 spring.cloud.config.profile=test
 #取git地址--需要添加文件分支
-#spring.cloud.config.label=master
+spring.cloud.config.label=master
 
 #开启服务配置
 spring.cloud.config.enabled=true
 #配置中心名称（可以是集群）
 spring.cloud.config.discovery.service-id=config-server
+
+#rabbit相关配置
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+#打开bus端点
+spring.cloud.bus.enabled=true
+#对外暴露端点
+management.endpoints.web.exposure.include=health,info,bus-refresh
+#打开bus跟踪
+spring.cloud.bus.trace.enabled=true
 
 
