--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -7,12 +7,12 @@ server.port=8888
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 #取本地配置（默认从resources文件下读取配置文件）
-spring.profiles.active=native
+#spring.profiles.active=native
 #读取指定文件
 spring.cloud.config.server.native.search-locations=classpath:/
 
 #取git的配置文件
-#spring.cloud.config.server.git.uri=https://github.com/houfanGitHub/springcloud/
+spring.cloud.config.server.git.uri=https://github.com/houfanGitHub/springcloud/
 #spring.cloud.config.server.git.search-paths=
 #如果是私有项目，则需要配置账号密码，公共则不需要
 #spring.cloud.config.server.git.username=
